[gd_scene load_steps=2 format=2]

[ext_resource path="res://dialogs/tab_dialog/tab_dialog.gd" type="Script" id=1]

[node name="TabDialog" type="PopupDialog"]
margin_left = 60.0
margin_top = 60.0
margin_right = 900.0
margin_bottom = 660.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 840.0
margin_bottom = 558.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="VBoxContainer"]
margin_left = 295.0
margin_top = 562.0
margin_right = 545.0
margin_bottom = 582.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
text = "Close"

[connection signal="tab_changed" from="VBoxContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="hide"]
